kustomize/homarr/overlays/nghz.net/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
spec:
  selector:
    matchLabels:
      app: homarr
  template:
    metadata:
      labels:
        app: homarr
    spec:
      containers:
      - name: homarr
        image: ghcr.io/ajnart/homarr:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 7575
        volumeMounts:
        - name: homarr-configs
          mountPath: /app/data/configs
        - name: homarr-icons
          mountPath: /app/public/icons
      volumes:
      - name: homarr-configs
        persistentVolumeClaim:
          claimName: homarr-configs
      - name: homarr-icons
        persistentVolumeClaim:
          claimName: homarr-icons
---
apiVersion: v1
kind: Service
metadata:
  name: homarr
spec:
  selector:
    app: homarr
  ports:
  - port: 7575
    targetPort: 7575
    name: http
