kustomize/homarr/overlays/nghz.net/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr-https
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/preserve-host: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - homarr.nghz.net
    secretName: homarr-certificates
  rules:
  - host: homarr.nghz.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homarr
            port:
              name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/preserve-host: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-http-to-https@kubernetescrd
spec:
  tls:
  - hosts:
    - homarr.nghz.net
    secretName: homarr-certificates
  rules:
  - host: homarr.nghz.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homarr
            port:
              name: http
